# roomcut

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md
.github/workflows/: ci.yml
apps/macos/NowPlayingHelper/: MediaRemote.h  RoomcutNowPlaying.m  roomcut-nowplaying.pl
apps/macos/Roomcut/: AdvancedControls.swift  AudioStatusView.swift  EngineClient.swift  EqMiniCurve.swift  EqualizerView.swift  HomeTab.swift  InspectTab.swift  LRCLIBClient.swift  MainWindow.swift  MenuContent.swift  NowPlayingMonitor.swift  NowPlayingPayload.swift  NowPlayingView.swift  ParametricEditor.swift  RoomTuneAnalysis.swift  RoomTuneInputScanner.swift  RoomTuneMeasurement.swift  RoomTuneRecorder.swift  RoomTuneSweep.swift  RoomTuneTab.swift  RoomcutApp.swift  RoomcutAppCanvas.swift  RoomcutBackgroundLayer.swift  RoomcutGlassStyle.swift  RoomcutMacroControls.swift  RoomcutMainPresentation.swift  RoomcutPresentation.swift  RoomcutTheme.swift  RoomcutViewModel.swift  SelfTest.swift  SettingsTab.swift  SpaceTab.swift  UIFixture.swift  WindowChrome.swift  main.swift
apps/macos/RoomcutTests/: LRCLIBClientTests.swift  LocalizationTests.swift  LyricsParsingTests.swift  MainPresentationTests.swift  NowPlayingPayloadTests.swift  PresentationTests.swift  RoomcutViewModelTests.swift
core/dsp/: Analyzer.hpp  Biquad.hpp  ChainParams.hpp  Compressor.hpp  DSPChain.hpp  GraphicEQ.hpp  Limiter.hpp  ParametricEQ.hpp  Spatial.hpp
core/presets/: BuiltinPresets.hpp  PresetValidator.hpp
core/tests/: CMakeLists.txt  test_analyzer.cpp  test_biquad.cpp  test_compressor.cpp  test_dsp_chain.cpp  test_graphic_eq.cpp  test_limiter.cpp  test_parametric.cpp  test_presets.cpp  test_ring.c  test_spatial.cpp
docs/: README.de.md  README.fr.md  README.ja.md  README.ko.md
driver/RoomcutHAL/: CMakeLists.txt  Info.plist
driver/RoomcutHAL/include/: RoomcutDriver.h  RoomcutTransport.h
driver/RoomcutHAL/src/: RoomcutIO.c  RoomcutPlugIn.c  RoomcutProperties.c  RoomcutTransport.c
engine/: CMakeLists.txt
engine/client/: ClientShim.cpp
engine/client/include/: roomcut_client.h
engine/include/: Control.hpp  CubicResampler.hpp  DeviceSelection.hpp  Handshake.hpp  Heartbeat.hpp  Lifecycle.hpp  LinearResampler.hpp  OutputDevice.hpp  RingRegion.hpp
engine/src/: Control.cpp  DeviceSelection.cpp  Handshake.cpp  Heartbeat.cpp  Lifecycle.cpp  OutputDevice.cpp  RingRegion.cpp  main.cpp  roomcut-devicectl.cpp  roomcut-driver-sim.cpp  roomcutctl.cpp
engine/tests/: test_control.cpp  test_device_policy.cpp  test_handshake.cpp  test_heartbeat.cpp  test_lifecycle.cpp  test_resampler.cpp  test_ring_region.cpp  test_volume_ramp.cpp
scripts/: analyze-dump.py  build-app.sh  collect-logs.sh  com.roomcut.engine.plist  install-driver.sh  install-engine.sh  package-release.sh  reset-audio-output.sh  restart-coreaudiod.sh  uninstall-driver.sh  uninstall-engine.sh  verify-transfer.sh
scripts/release/: README.txt  install.sh  postinstall  uninstall.sh
shared/protocol/: roomcut_audio_format.h  roomcut_handshake.h  roomcut_ipc.h  roomcut_ring.h
shared/schemas/: ai_proposal.schema.json  analysis.schema.json  device.schema.json  preset.schema.json
